# rs-upgrade

./: Cargo.toml
src/: cli.rs  cmd.rs  main.rs  root.rs  updater.rs
src/cmd/: list.rs
src/updater/: pnpm.rs
