[package]
name = "rs-upgrade"
version = "0.1.0"
edition = "2021"
authors = ["Niels Mentink <niels@ment.ink>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.23", features = ["derive"] }
serde = { version = "1.0.185", features = ["derive"] }
serde_json = "1.0.105"
subprocess = "0.2.9"
